--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,1 +1,3 @@
-../.config/nvim/coc-settings.json
+{
+  "clangd.path": "/home/hubohan/.config/coc/extensions/coc-clangd-data/install/11.0.0/clangd_11.0.0/bin/clangd"
+}
